--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+<head>
   <meta charset="utf-8">
   <title>ConvertidorMonedas</title>
   <base href="/">
@@ -6,9 +8,8 @@
   <link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-cash-marketing-and-growth-justicon-lineal-color-justicon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-<style>body{background:linear-gradient(#00000080,#00000080),url(https://cdn.pixabay.com/photo/2016/11/22/19/17/buildings-1850129_960_720.jpg);background-size:cover;background-position:50%;height:100vh}</style><link rel="stylesheet" href="styles.6175b54803e3d54970d1.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.6175b54803e3d54970d1.css"></noscript></head>
+</head>
 <body>
   <app-root></app-root>
-<script src="runtime.994943e7a4eb50ce9c4f.js" defer></script><script src="polyfills.547e403b58084f0b32dd.js" defer></script><script src="main.d731da2551ab241fcb3b.js" defer></script>
-
-</body></html>
+</body>
+</html>
